0.21 beta 2 - in development
----------------------------

 * qcat:
   * Fixed problem with viewing file from qbrowse.
     (Alexander Belchenko, Bug #776196)


0.21 beta 1 - 2011/05/02
------------------------
What's new in this release:

QBzr 0.21 is companion release for bzr 2.4, and compatible with bzr 2.3.
New features in this release:

qdiff window has been reworked and all controls moved to a toolbar, similar to
one in qannotate window. Also qdiff toolbar provides you new functions: text
search within active pane and also knob to ignore whitespace changes (it's 
also available as command-line option).

User can configure the tab width and this setting affects qdiff, qannotate and
qcat windows. By default tab width equals to 8 characters, user can set new
default value in bazaar.conf as ``tab_width = N`` (either via qconfig or
editing [DEFAULT] section of bazaar.conf). Also user can set individual tab
width for branches in their branch.conf.

Other changes include major rework of qinfo dialog (show the same information
as CLI ``bzr info`` does), qcommit dialog now remembers state of "Show
non-versioned" knob between runs, and several other improvements and bugfixes
(see full changelog for details).

Changelog:
 * qbranch:
   * Fixed problem with very small width of input fields in the dialog
     on Mac OSX. (Timothy Reaves, Bug #667090)
 * qbrowse:
   * Use `qcat --native` equivalent to allow opening copies of files from
     branches without working trees. (A. S. Budden, Bug #752422)
 * qcommit:
   * Remember "Show non-versioned" checkbox state. 
     (Nick Sonneveld, Bug #258926)
 * qconflicts:
   * Fixed internal error when there is conflict in non-versioned file.
     (Alexander Belchenko, Bug #655451)
 * qdiff:
   * New toolbar with controls and options (similar to qannotate's toolbar).
     (Dorin Scutarașu)
   * Support for ignore whitespace differences in changes. 
     This mode can be turned on from command-line (`qdiff -w` 